Final R Code and QMD Report

--- a/slyastrologer_individual_report.qmd
+++ b/slyastrologer_individual_report.qmd
@@ -17,15 +17,15 @@ To assess the economic health of the MTA, I focused on measuring the flow of mon
 
 ## TASK 2: Idenitfying Data Sources
 
-In identifying data sources for this project, I initially considered using the fare data provided by the Federal Transit Administration (FTA), which had been used in Mini Project One. However, I decided against it for two key reasons: first, the data was split into seven separate yearly datasets, making it unwieldy, and second, it lacked the level of detail I needed, particularly regarding the relationship between ridership and fare revenue. Instead, I used a publicly available dataset from the MTA’s website, which provided monthly financial data from January 2019 onward. This dataset included both revenues and expenditures, broken down by type, allowing me to track monthly trends in revenue and gain a clearer picture of the MTA's overall financial health, including operating costs and capital expenditures.
+In identifying data sources for this project, I initially considered using the fare data provided by the Federal Transit Administration (FTA), which had been used in Mini Project One. However, I decided against it for two key reasons: first, the data was split into seven separate yearly datasets, making it unwieldy, and second, it lacked the level of detail I needed, particularly regarding the relationship between ridership and fare revenue. Instead, I used a [publicly available dataset](https://catalog.data.gov/dataset/mta-statement-of-operations-beginning-2019) from the State of New York, which provided monthly MTA financial data from January 2019 onward. This dataset included both revenues and expenditures, broken down by type, allowing me to track monthly trends in revenue and gain a clearer picture of the MTA's overall financial health, including operating costs and capital expenditures.
 
-For the rideshare revenue analysis, I was unable to find direct data on rideshare revenues, so I constructed the dataset by extracting monthly ridership trip data from publicly available City of New York datasets. I then estimated revenue by multiplying the total number of trips by the average fare per ride, derived from pricing information provided by Uber and Lyft (the two largest riseshare companies in NYC), along with the typical trip distance in New York City.
+For the rideshare revenue analysis, I was unable to find direct data on rideshare revenues, so I constructed the dataset by extracting monthly ridership trip data from publicly available City of New York [datasets](https://data.cityofnewyork.us/Transportation/FHV-Base-Aggregate-Report/2v9c-2k7f/about_data). I then estimated revenue by multiplying the total number of trips by the average fare per ride, derived from pricing information provided by [Uber](https://www.investopedia.com/articles/personal-finance/021015/uber-versus-yellow-cabs-new-york-city.asp) and [Lyft](https://www.lyft.com/pricing/BKN) (the two largest rideshare companies in NYC), along with the maximum trip distance in New York City (8 miles).
 
-To evaluate the impact of remote work on MTA revenues, I encountered challenges in locating consistent data on remote work trends. As a result, I relied on a 2023 study conducted by the MTA, which provided key insights into how shifts in work patterns were affecting subway ridership and, by extension, fare revenue.
+To evaluate the impact of remote work on MTA revenues, I encountered challenges in locating consistent data on remote work trends. As a result, I relied on a [2023 study](https://new.mta.info/agency/new-york-city-transit/subway-bus-ridership-2023#:~:text=Increased%20telecommuting%20and%20more%20flexible,the%20weekday%20recovery%20of%2066%25.) conducted by the MTA, which provided key insights into how shifts in work patterns were affecting subway ridership and, by extension, fare revenue.
 
 ## TASK 3: MTA Data Import, Cleaning, Visualization, and Analysis
 
-To begin my analysis, I need to load the necessary packages to manipulate the data I will be importing. There are five packages in total I need to load: 
+To begin my analysis, I need to load the necessary packages to manipulate the data I will be importing. There are five packages in total I need to load. 
 
 ```{r}
 # Install and load the necessary packages
@@ -209,8 +209,14 @@ The analysis of MTA, Uber, and Lyft revenues in context of each other reveals a 
 
 ## TASK 6: Remote Work in Context
 
+While hard data on the exact number of NYC workers or the percentage working from home remains unavailable, the MTA has provided key insights into how the rise of remote work has influenced subway ridership in 2023; a crucial factor in determining fare revenues. The MTA has found that in the aftermath of the pandemic, a fundamental shift in commuting patterns has emerged, with discretionary travel now more common than traditional daily commutes. Additionally, as telecommuting has become more widespread, the regular five-day commute has significantly declined. As a result, Tuesdays, Wednesdays, and Thursdays, now represent the highest commuter traffic days, reflecting this shift in work schedules.
 
+Furthermore, the recovery of subway ridership post-pandemic has been uneven. While weekday ridership is recovering at a slower pace, at 66% of pre-pandemic levels, weekend ridership has rebounded more strongly, reaching 77% of pre-pandemic levels. This disparity underscores how changes in work habits have altered not just the volume of daily commuters, but also the broader patterns of subway usage - and thus collected fare revenues - across different days of the week. 
 
 ## CONCLUSION
 
+This analysis highlights the significant challenges and ongoing recovery of the New York City Subway system in the post-pandemic period. Despite nearly five years having passed since the onset of COVID-19, the MTA's fare revenue has yet to return to pre-pandemic levels, with noticeable dips in late 2020 and 2021 during winter surges in COVID-19 cases. This slow recovery can be partly attributed to a fundamental shift in commuting patterns, with the rise of remote work contributing to the decline of the traditional five-day commute. The MTA's data reveals that weekdays are experiencing a slower recovery, with commuter ridership at only 66% of pre-pandemic levels, while weekend ridership has fared better, at 77% of pre-pandemic levls.
 
+Furthermore, the rise of ride-share services — particularly Uber and Lyft — has had a limited impact on MTA revenues. During the pandemic, both companies experienced significant declines in revenue, and post-pandemic, Uber has yet to return to pre-pandemic levels, while Lyft has surpassed its previous revenue figures, indicating a possible shift in market share. Despite these shifts, the revenue trends for both companies closely mirror those of the MTA, suggesting that Uber and Lyft may be better understood as indicators of post-pandemic movement in NYC rather than as direct factors influencing each other’s performance. 
+
+Ultimately, it is clear that the rise in telecommuting and subsequent change in commuter habits has been among the most significant factors hindering the MTA’s economic recovery. Moving forward, adapting to this new reality will be crucial for the MTA as it seeks to adjust its strategies to drive up both ridership and revenue. 
