Final Report R and QMD Files

--- a/slyastrologer_individual_report.qmd
+++ b/slyastrologer_individual_report.qmd
@@ -31,6 +31,7 @@ library(dplyr)
 library(tidyr)
 library(lubridate)
 library(ggplot2)
+library(scales)
 ```
 
 After loading my packages into the R environment, I can now begin my data import. The first data that I will import into my project is data from the NYCMTA website containing the agency's revenues and expenditures for every month since January 2019.
@@ -69,6 +70,7 @@ ggplot(mtafarerevenue2019to2024, aes(x = Month, y = Fare_Revenue)) +
        y = "Fare Revenue") +
   theme_minimal() +
   scale_x_date(date_labels = "%b %Y", date_breaks = "6 months") +
+  scale_y_continuous(labels = comma) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
@@ -135,6 +137,7 @@ suppressWarnings(
          color = "Company") +
     theme_minimal() +
     scale_x_date(date_labels = "%b %Y", date_breaks = "6 months") +
+    scale_y_continuous(labels = comma) +
     scale_color_manual(values = c("UBER" = "black", "LYFT" = "pink")) +
     theme(axis.text.x = element_text(angle = 45, hjust = 1))
 )
@@ -202,6 +205,7 @@ ggplot(combined_data, aes(x = Month)) +
     color = "Agency"
   ) +
   scale_color_manual(values = c("MTA Fare Revenue" = "blue", "UBER" = "black", "LYFT" = "pink")) +
+  scale_y_continuous(labels = comma) +
   theme_minimal() +
   theme(legend.position = "top")
 ```
